# packed_str

./: Cargo.toml  Cranky.toml  README.md
src/: lib.rs
