[package]
name = "packed_str"
version = "0.2.0"
description = "Store immutable strings in a single packed allocation"
keywords = ["packed", "static", "strings", "array"]
categories = ["data-structures"]
repository = "https://github.com/ericseppanen/packed_str"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dependencies]
# No dependencies!

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
